[project]
name = "tldl"
version = "0.1.0"
description = "TLDL (Too Long; Didn't Listen) — MCP server that fetches YouTube/Spotify podcast transcripts as markdown."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0",
    "youtube-transcript-api>=1.0,<2",
    "yt-dlp>=2025.1.15",
    "httpx>=0.27",
    "rapidfuzz>=3.9",
    "uvicorn[standard]>=0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tldl"]
